[gd_scene load_steps=26 format=2]

[ext_resource path="res://assets/BigEye_flap_11.png" type="Texture" id=1]
[ext_resource path="res://assets/BigEye_flap_07.png" type="Texture" id=2]
[ext_resource path="res://assets/BigEye_flap_08.png" type="Texture" id=3]
[ext_resource path="res://assets/BigEye_flap_09.png" type="Texture" id=4]
[ext_resource path="res://assets/BigEye_flap_18.png" type="Texture" id=5]
[ext_resource path="res://assets/BigEye_flap_17.png" type="Texture" id=6]
[ext_resource path="res://assets/BigEye_flap_06.png" type="Texture" id=7]
[ext_resource path="res://assets/BigEye_flap_15.png" type="Texture" id=8]
[ext_resource path="res://assets/BigEye_flap_02.png" type="Texture" id=9]
[ext_resource path="res://assets/BigEye_flap_13.png" type="Texture" id=10]
[ext_resource path="res://assets/BigEye_flap_05.png" type="Texture" id=11]
[ext_resource path="res://assets/BigEye_flap_12.png" type="Texture" id=12]
[ext_resource path="res://assets/BigEye_flap_16.png" type="Texture" id=13]
[ext_resource path="res://assets/BigEye_flap_03.png" type="Texture" id=14]
[ext_resource path="res://assets/BigEye_flap_01.png" type="Texture" id=15]
[ext_resource path="res://assets/BigEye_flap_10.png" type="Texture" id=16]
[ext_resource path="res://assets/BigEye_flap_00.png" type="Texture" id=17]
[ext_resource path="res://assets/BigEye_flap_04.png" type="Texture" id=18]
[ext_resource path="res://assets/BigEye_flap_14.png" type="Texture" id=19]
[ext_resource path="res://Boss1.gd" type="Script" id=20]
[ext_resource path="res://EnemyHealthBar.tscn" type="PackedScene" id=21]
[ext_resource path="res://Health.tscn" type="PackedScene" id=22]

[sub_resource type="CircleShape2D" id=1]
radius = 182.116

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 17 ), ExtResource( 15 ), ExtResource( 9 ), ExtResource( 14 ), ExtResource( 18 ), ExtResource( 11 ), ExtResource( 7 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 16 ), ExtResource( 1 ), ExtResource( 12 ), ExtResource( 10 ), ExtResource( 19 ), ExtResource( 8 ), ExtResource( 13 ), ExtResource( 6 ), ExtResource( 5 ) ],
"loop": true,
"name": "Idle",
"speed": 24.0
} ]

[sub_resource type="Animation" id=3]
resource_name = "AttackPattern"
length = 20.0
loop = true
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 2, 3, 4, 11, 12, 12.9, 13.5, 14, 14.9, 15.5, 15.9, 16.9, 17.4, 18.1, 19.1, 20.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "bats"
}, {
"args": [  ],
"method": "bats"
}, {
"args": [  ],
"method": "bats"
}, {
"args": [  ],
"method": "spreadShot"
}, {
"args": [  ],
"method": "spreadShot"
}, {
"args": [  ],
"method": "spreadShot"
}, {
"args": [  ],
"method": "bats"
}, {
"args": [  ],
"method": "spreadShot"
}, {
"args": [  ],
"method": "spreadShot"
}, {
"args": [  ],
"method": "bats"
}, {
"args": [  ],
"method": "spreadShot"
}, {
"args": [  ],
"method": "spreadShot"
}, {
"args": [  ],
"method": "bats"
}, {
"args": [  ],
"method": "spreadShot"
}, {
"args": [  ],
"method": "spreadShot"
}, {
"args": [  ],
"method": "spreadShot"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:gfireballsOn")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 4, 10.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="Boss1" type="Area2D"]
collision_layer = 0
collision_mask = 257
script = ExtResource( 20 )

[node name="EnemyHitBox" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "Idle"

[node name="HealthBar" parent="." instance=ExtResource( 21 )]
margin_left = -215.449
margin_top = -240.346
margin_right = 217.551
margin_bottom = -199.346

[node name="Health" parent="." instance=ExtResource( 22 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/AttackPattern = SubResource( 3 )

[node name="gfireballstimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true
[connection signal="area_entered" from="." to="." method="_on_Boss1_area_entered"]
[connection signal="depleted" from="Health" to="." method="_on_Health_depleted"]
